--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "v2p-common",
+  "name": "vue-common",
   "version": "0.1.0",
   "description": "Vet2Pet common library",
   "main": "dist/v2p-common.ssr.js",
